samples/_failures_safe/1761270158_078d18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1ec83ee.c:156: error: expected ‘;’, ‘,’ or ‘)’ at end of input
